--- a/TeduShop.Web/Views/Admin/Index.cshtml
+++ b/TeduShop.Web/Views/Admin/Index.cshtml
@@ -18,6 +18,7 @@
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="/Assets/admin/css/skins/_all-skins.min.css">
     <link href="~/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
+    <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -450,14 +451,16 @@
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>>
     <script src="~/app/shared/services/apiService.js"></script>
+    <script src="~/app/shared/services/commonService.js"></script>
     <script src="~/app/app.js"></script>
 
+    <script src="~/app/components/home/homeController.js"></script>
+    <script src="~/app/components/products/productListController.js"></script>
     <script src="~/app/components/product_categories/productCategoryListController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
+    <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
     <script src="~/app/components/products/productEditController.js"></script>
     <script src="~/app/components/products/productAddController.js"></script>
-    <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
-    <script src="~/app/components/products/productListController.js"></script>
-    <script src="~/app/components/home/homeController.js"></script>
 
     <script src="~/app/shared/services/notificationService.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
