--- a/TeduShop.Web/app/components/product_categories/productCategoryEditView.html
+++ b/TeduShop.Web/app/components/product_categories/productCategoryEditView.html
@@ -7,22 +7,22 @@
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
         <li><a href="#"><i class="fa"></i> Quản lý danh mục</a></li>
-        <li class="active">Thêm mới</li>
+        <li class="active">Cập nhật</li>
     </ol>
 </section>
 <!-- Form Element sizes -->
 <div class="box box-success">
     <div class="box-header with-border">
-        <h3 class="box-title">Thêm mới</h3>
+        <h3 class="box-title">Cập nhật danh mục {{productCategory.name}}</h3>
     </div>
 </div><!-- /.box -->
 <!-- form start -->
-<form class="form-horizontal" novalidate name="frmAddProductCategory" role="form" ng-submit="AddProductCategory()">
+<form class="form-horizontal" novalidate name="frmUpdateProductCategory" role="form" ng-submit="UpdateProductCategory()">
     <div class="box-body">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Tên danh mục</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-maxlength="256" required name="name" ng-change="GetSeoTitle()" ng-model="productCategory.Name">
+                <input type="text" class="form-control" ng-change="GetSeoTitle()" required name="name" ng-model="productCategory.Name">
                 <span ng-show="frmAddProductCategory.name.$invalid" class="has-error">Phải nhập tên danh mục</span>
                 <span ng-show="frmAddProductCategory.name.$error.maxlength" class="has-error">Tên danh mục chỉ được 256 ký tự</span>
             </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Mô tả ngắn</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="description" ng-maxlength="500" ng-model="productCategory.Description">
+                <input type="text" class="form-control" ng-maxlength="500" name="description" ng-model="productCategory.Description">
                 <span ng-show="frmAddProductCategory.description.$error.maxlength" class="has-error">Mô tả chỉ được 500 ký tự</span>
             </div>
         </div>
@@ -61,7 +61,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Hình ảnh</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="image" ng-model="productCategory.Image">
+                <input type="text" class="form-control" name="image" ng-maxlength="256" ng-model="productCategory.Image">
                 <span ng-show="frmAddProductCategory.image.$error.maxlength" class="has-error">Hình ảnh chỉ được 256 ký tự</span>
             </div>
         </div>
@@ -94,6 +94,6 @@
     </div><!-- /.box-body -->
     <div class="box-footer">
         <button ui-sref="product_categories" class="btn btn-default">Hủy</button>
-        <button type="submit" ng-disabled="frmAddProductCategory.$invalid" class="btn btn-success pull-right">Lưu</button>
+        <button type="submit" class="btn btn-success pull-right" ng-disabled="frmUpdateProductCategory.$invalid">Lưu</button>
     </div><!-- /.box-footer -->
 </form>
