--- a/TeduShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/TeduShop.Web/app/components/product_categories/productCategoryListView.html
@@ -43,7 +43,7 @@
                         <td><span ng-class="{'label label-success':item.Status==true, 'label label-danger':item.Status==false}">{{item.Status | statusFilter}}</span></td>
                         <td>
                             <button class="btn btn-sm btn-primary" ui-sref="edit_product_category({id:item.ID})"><i class="fa fa-pencil"></i></button>
-                            <button class="btn  btn-sm btn-danger" ui-sref="add_product_category"><i class="fa fa-trash"></i></button>
+                            <button class="btn  btn-sm btn-danger" ng-click="deleteProductCategory(item.ID)"><i class="fa fa-trash"></i></button>
                         </td>
                     </tr>
                     <tfoot>
