--- a/TeduShop.Web/app/components/products/productEditView.html
+++ b/TeduShop.Web/app/components/products/productEditView.html
@@ -13,7 +13,7 @@
 <!-- Form Element sizes -->
 <div class="box box-success">
     <div class="box-header with-border">
-        <h3 class="box-title">Cập nhật sản phẩm {{productCategory.Name}}</h3>
+        <h3 class="box-title">Cập nhật sản phẩm {{product.Name}}</h3>
     </div>
 </div><!-- /.box -->
 <!-- form start -->
