--- a/TeduShop.Web/app/components/products/productListView.html
+++ b/TeduShop.Web/app/components/products/productListView.html
@@ -28,20 +28,23 @@
             </div><!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
                 <button class="btn btn-success" ui-sref="add_product">Thêm mới</button>
+                <button class="btn btn-danger" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
                 <table class="table table-hover">
                     <tr>
+                        <td><input name="all" type="checkbox" ng-click="selectAll()" /></td>
                         <th style="width:40%">Tên Danh mục</th>
                         <th style="width:20%">Ngày tạo</th>
                         <th style="width:10%">Trạng thái</th>
                         <th style="width:25%">Thao tác</th>
                     </tr>
                     <tr ng-repeat="item in products">
+                        <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
                         <td>{{item.Name}}</td>
                         <td>{{item.CreatedDate | date:'dd/MM/yyyy hh:mm:ss'}}</td>
                         <td><span ng-class="{'label label-success':item.Status==true, 'label label-danger':item.Status==false}">{{item.Status | statusFilter}}</span></td>
                         <td>
-                            <button class="btn btn-sm btn-primary" ui-sref="edit_product({id:item.ID})"><i class="fa fa-pencil"></i></button>
-                            <button class="btn  btn-sm btn-danger" ui-sref="add_product"><i class="fa fa-trash"></i></button>
+                            <button class="btn btn-sm btn-primary" ui-sref="product_edit({id:item.ID})"><i class="fa fa-pencil"></i></button>
+                            <button class="btn  btn-sm btn-danger" ng-click="deleteProduct(item.ID)"><i class="fa fa-trash"></i></button>
                         </td>
                     </tr>
                     <tfoot>
