--- a/TeduShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/TeduShop.Web/app/components/product_categories/productCategoryListView.html
@@ -27,17 +27,19 @@
                 </div>
             </div><!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
+                <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+                <button class="btn btn-danger" ng-click="deleteMultiple()" id="btnDelete" disabled>Xóa</button>
                 <table class="table table-hover">
+
                     <tr>
-                        <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
-                    </tr>
-                    <tr>
+                        <td><input name="all" type="checkbox" ng-click="selectAll()" /></td>
                         <th style="width:40%">Tên Danh mục</th>
                         <th style="width:20%">Ngày tạo</th>
                         <th style="width:10%">Trạng thái</th>
                         <th style="width:25%">Thao tác</th>
                     </tr>
                     <tr ng-repeat="item in productCategories">
+                        <td><input type="checkbox" ng-model="item.checked" name="all" /></td>
                         <td>{{item.Name}}</td>
                         <td>{{item.CreatedDate | date:'dd/MM/yyyy hh:mm:ss'}}</td>
                         <td><span ng-class="{'label label-success':item.Status==true, 'label label-danger':item.Status==false}">{{item.Status | statusFilter}}</span></td>
