--- a/TeduShop.Web/app/components/products/productAddView.html
+++ b/TeduShop.Web/app/components/products/productAddView.html
@@ -51,7 +51,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Danh mục</label>
             <div class="col-sm-10">
-                <select name="parentId" class="form-control" ng-model="product.CategoryID" ng-options="option.ID as option.Name for option in categories">
+                <select name="parentId" class="form-control" ng-model="product.CategoryID" ng-options="option.ID as option.Name for option in productCategories">
                     <option value="">Danh mục gốc</option>
                 </select>
                 <input type="hidden" name="categoryId" ng-model="product.CategoryID" />
@@ -62,6 +62,25 @@
             <div class="col-sm-10">
                 <input type="number" class="form-control" name="displayOrder" required ng-model="product.DisplayOrder">
                 <span ng-show="frmAddProduct.displayOrder.$invalid" class="has-error">Phải nhập thứ tự</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Hình ảnh</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="image" required ng-model="product.Image">
+                <span ng-show="frmAddProduct.image.maxlength" class="has-error">Hình ảnh chỉ được 255 ký tự</span>
+                <button class="btn btn-default" type="button" ng-click="ChoseImage()">Chọn ảnh</button>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Thêm ảnh</label>
+            <div class="col-sm-10">
+                <ul class="list-inline">
+                    <li ng-repeat="img in MoreImages">
+                        <img ng-src="{{img}}" width="100" />
+                    </li>
+                </ul>
+                <button class="btn btn-default" type="button" ng-click="ChoseMoreImage()">Chọn ảnh</button>
             </div>
         </div>
         <div class="form-group">
@@ -118,7 +137,7 @@
         </div>
     </div><!-- /.box-body -->
     <div class="box-footer">
-        <button ui-sref="product_categories" class="btn btn-default">Hủy</button>
+        <button ui-sref="products" class="btn btn-default">Hủy</button>
         <button type="submit" ng-disabled="frmAddProduct.$invalid" class="btn btn-success pull-right">Lưu</button>
     </div><!-- /.box-footer -->
 </form>
